Fix z-index of sidebar toggler

--- a/src/app/modules/builder/builder/builder.component.scss
+++ b/src/app/modules/builder/builder/builder.component.scss
@@ -63,13 +63,10 @@ mat-sidenav-content {
   bottom: 0;
   display: -webkit-flex;
   display: flex;
-  //height: 56px;
-  //width: 56px;
   overflow: hidden;
-  //pointer-events: none;
   position: absolute;
   left: 0;
-  z-index: 9999;
+  z-index: 2;
 
   transition: all 0.5s;
 
